<resources>
    <string name="app_name">Student Learning App</string>
    <string name="c">C++</string>
    <string name="registration_number">registration number</string>
    <string name="create_account">Create Account</string>
    <string name="register_now">Register Now</string>
    <string name="hello">Hello</string>
    <string name="sign_into_your_account">Sign into your Account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="watch_video">Watch Video</string>
    <string name="type_question_below">Type Question Below</string>
    <string name="question">question description here...</string>
    <string name="add_question">Add Question</string>
    <string name="title">Title...</string>
    <string name="_1">1</string>
    <string name="null_pointer_exception">Null Pointer Exception</string>
    <string name="cs12016218">CS12016218</string>
    <string name="_11_15_am">11:15 AM</string>
    <string name="i_am_having_null_pnter_exception_in_notification_class">I am having null pnter exception in notification class</string>
    <string name="add_comment_below">Add Comment Below</string>
    <string name="add_comment_here">Add Comment here...</string>
    <string name="add_comment">Add Comment</string>
</resources>
