<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activity_add_question.ActivityAddQuestion">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_fonts_bold"
                android:paddingTop="16dp"
                android:text="@string/type_question_below"
                android:textAlignment="center"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/edt_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/my_fonts"
                android:hint="@string/title"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/edt_question_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_pencil"
                android:drawablePadding="16dp"
                android:fontFamily="@font/my_fonts"
                android:hint="@string/question" />

            <Button
                android:id="@+id/btn_add_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="32dp"
                android:background="#F3B245"
                android:elevation="20dp"
                android:fontFamily="@font/my_fonts_bold"
                android:text="@string/add_question"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_question"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>