<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/colorAccentLight"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_user_custom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/txt_registration_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_fonts_bold"
                    android:text="@string/cs12016218"
                    android:textColor="#000000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/my_fonts"
                    android:text="@string/_11_15_am"
                    android:textColor="#000000"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_comment_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/my_fonts"
            android:text="@string/i_am_having_null_pnter_exception_in_notification_class"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>