<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_gradient_background"
    android:orientation="vertical"
    android:weightSum="5">

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="#ffffff" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_student" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:elevation="30dp"
            android:minHeight="300dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/my_fonts_bold"
                    android:text="@string/sign_into_your_account"
                    android:textSize="21sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:drawableStart="@drawable/ic_email_black"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/my_fonts"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="21sp" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_lock_black"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/my_fonts"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="21sp" />

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="30dp"
                        android:background="#F3B245"
                        android:elevation="20dp"
                        android:fontFamily="@font/my_fonts_bold"
                        android:text="@string/login"
                        android:textColor="#ffffff"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="32dp"
            android:background="#F8F8F8"
            android:fontFamily="@font/my_fonts_bold"
            android:text="@string/register"
            android:textColor="#F89F05"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>